Fix issues with the icons on item sheets stretching/shrinking weirdly

--- a/display/shared/styling/parts/item-sheets.less
+++ b/display/shared/styling/parts/item-sheets.less
@@ -10,11 +10,11 @@
 		align-items: center;
 
 		.profile-img {
-			flex: 0 0 100px;
-			min-height: 50px;
-			max-height: 205px;
-			height: auto;
-			width: 100px;
+			max-height: 100px;
+			max-width: 100px;
+			height: fit-content;
+			width: fit-content;
+			padding: 5px;
 			margin-right: 0;
 		}
 
